# frappe-devenv

./: .gitignore  .gitmodules  README.md  env  flake.nix  node-offline-hashes.json  package.json  pyproject.toml  pyrightconfig.json
sites/: apps.json  apps.txt  common_site_config.json
sites/frappe.localhost/: site_config.json
wheel_target/: __init__.py
