[project]
name = "frappe-bench-devenv"
version = "0.1.0"
description = "Frappe Bench - Monorepo workspace for Frappe Development"
requires-python = ">=3.14"
readme = "README.md"

# Production runtime dependencies resolved into the shared virtualenv.
# Only packages needed at runtime in production containers belong here.
# frappe-bench provides the `bench` CLI used as the entrypoint in
# containers; setuptools is needed at import time by several transitive
# deps that use pkg_resources.
dependencies = [
    "frappe-bench>=5.29.0",
    "setuptools>=80.10.2",
]

# Dev-only tools — included in the devenv shell but excluded from
# production container images to keep them lean.
# Note: mypy is NOT listed here because frappe depends on basedmypy
# (a superset fork that provides the same `mypy` CLI).  Including
# both causes file collisions in the virtualenv.
[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pydantic>=2.12.5",
    "pydantic-core>=2.41.5",
    "pytest>=9.0.2",
    "responses",
    "ruff>=0.15.0",
    "semgrep>=1.145.0",
]

[tool.uv]
# Use uv's workspace feature to manage all apps together
# Mark this as a virtual package - no wheel will be built
package = false
# Resolve conflicts between frappe-bench (the CLI) and frappe (develop):
#   - frappe-bench pins click<8.3, but frappe develop needs click~=8.3.1
#     (the bench code works fine with 8.3.x — _check_nested_chain exists).
#   - frappe-bench caps requests<2.34, but frappe develop needs requests>=2.34.2
#     (the cap is conservative).
override-dependencies = [
  "click~=8.3.1",
  "requests>=2.34.2",
]

# Build-time dependencies for packages that need them but don't declare them.
# These are older Frappe/ERPNext transitive deps that predate PEP 517/518 and
# rely on setuptools/pkg_resources at build time. uv2nix consumes this table so
# the Nix build no longer needs an explicit setuptools overlay
# (see frappe-nix/lib/overrides.nix header comment for the rationale).
[tool.uv.extra-build-dependencies]
"cairocffi" = ["setuptools", "cffi", "pycparser"]
"backcall" = ["setuptools"]
"backoff" = ["setuptools"]
"barcodenumber" = ["setuptools"]
"bleach-allowlist" = ["setuptools"]
"braintree" = ["setuptools"]
"chardet" = ["setuptools"]
"colorama" = ["setuptools"]
"croniter" = ["setuptools"]
"cssselect" = ["setuptools"]
"cssselect2" = ["setuptools"]
"cssutils" = ["setuptools"]
"dataclasses-json" = ["setuptools"]
"decorator" = ["setuptools"]
"docopt" = ["setuptools"]
"dropbox" = ["setuptools"]
"email-reply-parser" = ["setuptools"]
"et-xmlfile" = ["setuptools"]
"executing" = ["setuptools"]
"filetype" = ["setuptools"]
"getmac" = ["setuptools"]
"gocardless-pro" = ["setuptools"]
"googlemaps" = ["setuptools"]
"gunicorn" = ["setuptools"]
"hiredis" = ["setuptools"]
"html5lib" = ["setuptools"]
"httplib2" = ["setuptools"]
"jellyfish" = ["setuptools"]
"jsonpath-ng" = ["setuptools"]
"ldap3" = ["setuptools"]
"markdown2" = ["setuptools"]
"markdownify" = ["setuptools"]
"marshmallow" = ["setuptools"]
"matplotlib-inline" = ["setuptools"]
"maxminddb-geolite2" = ["setuptools"]
"maxminddb" = ["setuptools"]
"monotonic" = ["setuptools"]
"num2words" = ["setuptools"]
"oauthlib" = ["setuptools"]
"openpyxl" = ["setuptools"]
"parso" = ["setuptools"]
"passlib" = ["setuptools"]
"paytmchecksum" = ["setuptools"]
"pdfkit" = ["setuptools"]
"pexpect" = ["setuptools"]
"phonenumbers" = ["setuptools"]
"pickleshare" = ["setuptools"]
"plaid-python" = ["setuptools"]
"ply" = ["setuptools"]
"polyline" = ["setuptools"]
"posthog" = ["setuptools"]
"premailer" = ["setuptools"]
"prompt-toolkit" = ["setuptools"]
"psutil" = ["setuptools"]
"ptyprocess" = ["setuptools"]
"pure-eval" = ["setuptools"]
"pyasn1-modules" = ["setuptools"]
"pyasn1" = ["setuptools"]
"pycountry" = ["setuptools"]
"pycryptodome" = ["setuptools"]
"pydyf" = ["setuptools"]
"pyjwt" = ["setuptools"]
"pymysql" = ["setuptools"]
"pyopenssl" = ["setuptools"]
"pyotp" = ["setuptools"]
"pyparsing" = ["setuptools"]
"pypdf" = ["setuptools"]
"pyphen" = ["setuptools"]
"pypika" = ["setuptools"]
"pypng" = ["setuptools"]
"pyqrcode" = ["setuptools"]
"python-barcode" = ["setuptools"]
"python-docx" = ["setuptools"]
"python-ldap" = ["setuptools"]
"python-magic" = ["setuptools"]
"python-pptx" = ["setuptools"]
"python-stdnum" = ["setuptools"]
"python-youtube" = ["setuptools"]
"pytz" = ["setuptools"]
"rapidfuzz" = ["setuptools"]
"rauth" = ["setuptools"]
"razorpay" = ["setuptools"]
"redis" = ["setuptools"]
"requests-oauthlib" = ["setuptools"]
"responses" = ["setuptools"]
"restrictedpython" = ["setuptools"]
"rq" = ["setuptools"]
"rsa" = ["setuptools"]
"ruamel-yaml-clib" = ["setuptools"]
"six" = ["setuptools"]
"soupsieve" = ["setuptools"]
"sql-metadata" = ["setuptools"]
"sqlparse" = ["setuptools"]
"stack-data" = ["setuptools"]
"stone" = ["setuptools"]
"stripe" = ["setuptools"]
"tenacity" = ["setuptools"]
"terminaltables" = ["setuptools"]
"tinycss2" = ["setuptools"]
"tinyhtml5" = ["setuptools"]
"traceback-with-variables" = ["setuptools"]
"traitlets" = ["setuptools"]
"typing-inspect" = ["setuptools"]
"unidecode" = ["setuptools"]
"uritemplate" = ["setuptools"]
"us" = ["setuptools"]
"vobject" = ["setuptools"]
"wcwidth" = ["setuptools"]
"weasyprint" = ["setuptools"]
"webencodings" = ["setuptools"]
"whoosh" = ["setuptools"]
"xlrd" = ["setuptools"]
"xmltodict" = ["setuptools"]
"zopfli" = ["setuptools"]
"zxcvbn" = ["setuptools"]

[tool.uv.workspace]
members = [
    "apps/frappe",
    "apps/erpnext",
    "apps/hrms",
]

[tool.uv.sources]
# Link workspace members as editable installs
frappe = { workspace = true }
erpnext = { workspace = true }
hrms = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
# This is a virtual package - workspace root only
skip-excluded-dirs = true

[tool.ruff]
line-length = 110
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]  # Line length handled by formatter

[tool.mypy]
python_version = "3.14"
ignore_missing_imports = true
